Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,4 +27,11 @@ steps:
     goals: 'spring-boot:build-image'
     publishJUnitResults: false
     jdkVersionOption: '1.11'
-
+- task: Docker@2
+  inputs:
+    containerRegistry: 'SandboxSkyklarRegistry'
+    command: 'push'
+    tags: |
+      $(Build.BuildId)
+      latest
+      1
