--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'SandboxSkyklarRegistry'
-    repository: 'nebula/supernova'
+    repository: 'leveranseplattform/supernova'
     command: 'push'
     tags: |
       $(Build.BuildId)
