--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Build dockerimage
-      run: mvn -B spring-boot:build-image
+      run: mvn -D skipTests -B spring-boot:build-image
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
       with:
