--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,8 +16,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: actions-ecosystem/action-get-latest-tag@v1
-      id: get-latest-tag
     - name: Set up JDK 1.11
       uses: actions/setup-java@v1
       with:
@@ -43,5 +41,5 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-       docker tag ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova:${{ steps.get-latest-tag.outputs.tag }}
-       docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova
+       docker tag ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova:${{ github.sha }}
+       docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova:${{ github.sha }}
