--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ jobs:
        restore-keys: |
          ${{ runner.os }}-maven-
     - name: Build with Maven
-      run: mvn -B package
+      run: mvn -B package --file pom.xml
     - name: Build dockerimage
       run: mvn -D skipTests -B spring-boot:build-image
     - name: 'Login via Azure CLI'
