--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,7 +18,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name : Checkout code
+      uses: actions/checkout@v2
+      with:
+       ref: ${{ github.head_ref }}   # checkout the correct branch name
+       fetch-depth: 0                # fetch the whole repo history
+    - name: Git Version
+      uses: codacy/git-version@2.2.0
     - name: Set up JDK 1.11
       uses: actions/setup-java@v1
       with:
