--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,11 +20,17 @@ jobs:
     steps:
     - name : Checkout code
       uses: actions/checkout@v2
+    - name: "Automated Version Bump"
+      id: version-bump
+      uses: "phips28/gh-action-bump-version@master"
       with:
-       ref: ${{ github.head_ref }}   # checkout the correct branch name
-       fetch-depth: 0                # fetch the whole repo history
-    - name: Git Version
-      uses: codacy/git-version@2.2.0
+          tag-prefix: ''
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name:  'Output Step'
+      env:
+        NEW_TAG: ${{ steps.version-bump.outputs.newTag }}
+      run: echo "new tag $NEW_TAG"
     - name: Set up JDK 1.11
       uses: actions/setup-java@v1
       with:
