--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,17 +20,12 @@ jobs:
     steps:
     - name : Checkout code
       uses: actions/checkout@v2
-    - name: "Automated Version Bump"
-      id: version-bump
-      uses: "phips28/gh-action-bump-version@master"
       with:
-          tag-prefix: ''
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name:  'Output Step'
-      env:
-        NEW_TAG: ${{ steps.version-bump.outputs.newTag }}
-      run: echo "new tag $NEW_TAG"
+        fectch-depth: 0
+    - uses: paulhatch/semantic-version@v4.0.1
+      with:
+        # The prefix to use to identify tags
+        tag_prefix: "v"
     - name: Set up JDK 1.11
       uses: actions/setup-java@v1
       with:
