--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,9 +24,6 @@ jobs:
       id: tagName
       with:
         tagRegex: "v(.*)"  # Optional. Returns specified group text as tag name. Full tag string is returned if regex is not defined.
-    - name: Some other step # Output usage example
-      with:
-        tagname: ${{ steps.tagName.outputs.tag }}
     - name: Set up JDK 1.11
       uses: actions/setup-java@v1
       with:
@@ -46,6 +43,6 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-       docker tag ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova:${GITHUB_SHA::7}
-       docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova:${GITHUB_SHA::7}
+       docker tag ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova:${{ steps.tagName.outputs.tag }}
+       docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova:${{ steps.tagName.outputs.tag }}
 
