--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,7 @@ steps:
     publishJUnitResults: false
     jdkVersionOption: '1.11'
 - task: Docker@2
+  displayName: Push Docker image
   inputs:
     containerRegistry: 'SandboxSkyklarRegistry'
     repository: 'leveranseplattform/supernova'
