--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,8 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
+name: $(TeamProject)_$(Build.DefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
+
 trigger:
 - main
 
@@ -10,6 +12,8 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- script: echo 'build number $(Build.BuildNumber)' # outputs customized build number like project_def_master_20200828.1
+- script: echo 'branch name $(Build.SourceBranchName)'
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
