--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,12 +7,13 @@ name: $(TeamProject)_$(Build.DefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd
 
 trigger:
 - main
+- feature/*
+- bugfix/*
 
 pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: echo 'build number $(Build.BuildNumber)' # outputs customized build number like project_def_master_20200828.1
 - script: echo 'branch name $(Build.SourceBranchName)'
 - task: Maven@3
   inputs:
@@ -37,4 +38,4 @@ steps:
     containerRegistry: 'SandboxSkyklarRegistry'
     repository: 'leveranseplattform/supernova'
     command: 'push'
-    tags: 'main-$(Build.BuildId)'
+    tags: '$(Build.SourceBranchName)-$(Build.BuildId)'
