--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,5 @@
 # Maven
-# Build your Java project and run tests with Apache Maven.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
+
 
 name: $(TeamProject)_$(Build.DefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
 
@@ -14,6 +12,12 @@ pool:
 steps:
 - script: echo 'build number $(Build.BuildNumber)' # outputs customized build number like project_def_master_20200828.1
 - script: echo 'branch name $(Build.SourceBranchName)'
+- task: AzureKeyVault@1
+  inputs:
+    azureSubscription: 'sandbox.skyklar(940b8dee-c9e6-46a0-932b-45a432cbf944)'
+    KeyVaultName: 'kv-skyklar-sb'
+    SecretsFilter: '*'
+    RunAsPreJob: false
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
