debug what we have in github actoins

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,15 +3,10 @@
 
 name: Supernova github
 
-env:
-    SHA7: ${GITHUB_SHA:7}
 
 on:
   push:
-    branches: [ main ]
-    tags: [ "v*" ]
-  pull_request:
-    branches: [ main ]
+    branches: '**' # note that a branch cannot contain a slash here
 
 jobs:
   build:
@@ -21,14 +16,41 @@ jobs:
     steps:
     - name : Checkout code
       uses: actions/checkout@v2
-    - run: echo ${{ github.event.release.tag_name }}
-    - run: echo ${{ github.ref }}
+    # Just add this  =>
+    - name: Inject slug/short variables
+      uses: rlespinasse/github-slug-action@v3.x
+
+    - name: Dump GitHub context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: echo "$GITHUB_CONTEXT"
+
+    # And you get this  =>
+    - name: Print slug/short variables
+      run: |
+        echo "Slug variables"
+        echo " - ${{ env.GITHUB_REF_SLUG }}"
+        echo " - ${{ env.GITHUB_HEAD_REF_SLUG }}"
+        echo " - ${{ env.GITHUB_BASE_REF_SLUG }}"
+        echo " - ${{ env.GITHUB_REPOSITORY_SLUG }}"
+        // output e.g. : master feat-new-feature v1.0.0 product-1.0.0-rc.2 new-awesome-product
+        echo "Slug URL variables"
+        echo " - ${{ env.GITHUB_REF_SLUG_URL }}"
+        echo " - ${{ env.GITHUB_HEAD_REF_SLUG_URL }}"
+        echo " - ${{ env.GITHUB_BASE_REF_SLUG_URL }}"
+        echo " - ${{ env.GITHUB_REPOSITORY_SLUG_URL }}"
+        // output e.g. : master feat-new-feature v1-0-0 product-1-0-0-rc-2 new-awesome-product
+        echo "Short SHA variables"
+        echo " - ${{ env.GITHUB_SHA_SHORT }}"
+        // output e.g. : ffac537e
+
     - name: Set up JDK 1.11
       uses: actions/setup-java@v1
       with:
         java-version: 1.11
+
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file pom.xml -Dimage.version
     - name: Build dockerimage
       run: mvn -D skipTests -B spring-boot:build-image
     - name: 'Login via Azure CLI'
