--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,30 +16,14 @@ jobs:
     steps:
     - name : Checkout code
       uses: actions/checkout@v2
-    # Just add this  =>
     - name: Inject slug/short variables
       uses: rlespinasse/github-slug-action@v3.x
 
-    - name: Dump GitHub context
-      env:
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-      run: echo "$GITHUB_CONTEXT"
-
-    # And you get this  =>
-    - name: Print slug/short variables
+    - name: build_id
+      id: build_id
       run: |
-        echo "Slug variables"
-        echo " - ${{ env.GITHUB_REF_SLUG }}"
-        echo " - ${{ env.GITHUB_HEAD_REF_SLUG }}"
-        echo " - ${{ env.GITHUB_BASE_REF_SLUG }}"
-        echo " - ${{ env.GITHUB_REPOSITORY_SLUG }}"
-        echo "Slug URL variables"
-        echo " - ${{ env.GITHUB_REF_SLUG_URL }}"
-        echo " - ${{ env.GITHUB_HEAD_REF_SLUG_URL }}"
-        echo " - ${{ env.GITHUB_BASE_REF_SLUG_URL }}"
-        echo " - ${{ env.GITHUB_REPOSITORY_SLUG_URL }}"
-        echo "Short SHA variables"
-        echo " - ${{ env.GITHUB_SHA_SHORT }}"
+        echo "::set-output name=id::$(date +%s)"
+        echo "::set-output name=tag::${{ env.GITHUB_REF_SLUG}}-$(date +%s)"
 
     - name: Set up JDK 1.11
       uses: actions/setup-java@v1
@@ -47,7 +31,7 @@ jobs:
         java-version: 1.11
 
     - name: Build with Maven
-      run: mvn -B package --file pom.xml -Dimage.version
+      run: mvn -B package --file pom.xml -Dimage.version=${{steps.build_id.outputs.tag}}
     - name: Build dockerimage
       run: mvn -D skipTests -B spring-boot:build-image
     - name: 'Login via Azure CLI'
@@ -61,5 +45,5 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-       docker tag ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova:${GITHUB_SHA::7}
-       docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova:${GITHUB_SHA::7}
+       docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova:${{steps.build_id.outputs.tag}}
+#       docker tag ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova:${GITHUB_SHA::7}
