--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,14 +16,13 @@ jobs:
     steps:
     - name : Checkout code
       uses: actions/checkout@v2
-    - name: Inject slug/short variables
-      uses: rlespinasse/github-slug-action@v3.x
-
-    - name: build_id
-      id: build_id
+    - name: Generate build ID
+      id: prep
       run: |
-        echo "::set-output name=id::$(date +%s)"
-        echo "::set-output name=tag::${{ env.GITHUB_REF_SLUG}}-$(date +%s)"
+        branch=${GITHUB_REF##*/}
+        sha=${GITHUB_SHA::8}
+        ts=$(date +%s)
+        echo "::set-output name=BUILD_ID::${branch}-${sha}-${ts}"
 
     - name: Set up JDK 1.11
       uses: actions/setup-java@v1
@@ -33,7 +32,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Build dockerimage
-      run: mvn -D skipTests -B spring-boot:build-image -Dimage.version=${{steps.build_id.outputs.tag}}
+      run: mvn -D skipTests -B spring-boot:build-image -Dimage.version=${{ steps.prep.outputs.BUILD_ID }}
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
       with:
@@ -45,4 +44,4 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-       docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova:${{steps.build_id.outputs.tag}}
+       docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/leveranseplattform/supernova:${{ steps.prep.outputs.BUILD_ID }}
