--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,11 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- bash: |
+   GITHUB_SHA=$(Build.SourceVersion)
+   sha=${GITHUB_SHA::8}
+   ts=$(date +%s)
+   echo "##vso[task.setvariable variable=BUILD_ID]$(Build.SourceBranchName)-${sha}-${ts}"
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
