--- a/src/test/resources/application-integration.properties
+++ b/src/test/resources/application-integration.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:tc:postgresql:11.7-alpine:///
 spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
