--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
 
-    runs-on: [self-hosted, ubuntu-latest]
+    runs-on: [self-hosted, linux]
 
     steps:
     - name : Checkout code
